--- a/project/AndroidManifest.xml
+++ b/project/AndroidManifest.xml
@@ -10,6 +10,9 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <!-- 读写联系人 -->
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.WRITE_CONTACTS" />
     
     <application
         android:allowBackup="true"
@@ -42,6 +45,11 @@
         
         <activity
             android:name=".UserInfoActivity"
+            android:label="@string/app_name" >
+        </activity>
+        
+        <activity
+            android:name=".SynContactsActivity"
             android:label="@string/app_name" >
         </activity>
     </application>
