--- a/project/.classpath
+++ b/project/.classpath
@@ -5,5 +5,7 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
+	<classpathentry kind="lib" path="/home/dsd/Downloads/httpcomponents-client-4.5.1/lib/httpclient-4.5.1.jar"/>
+	<classpathentry kind="lib" path="/home/dsd/Downloads/httpcomponents-client-4.5.1/lib/httpcore-4.4.3.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
